<resources>
    <string name="app_name">Lavender</string>
    <string name="version">v 1.3.0</string>
    <string name="lalala">~\(≧▽≦)/~</string>
    <string name="action_yourshotlink">page url</string>
    <string name="action_refresh">Random one</string>
    <string name="action_share">Share</string>
    <string name="report_email_title">Lavender suggests and reports</string>
    <string name="notfound404">HTTP 404 Not Found</string>
    <string name="exception_content_null">Content null</string>
    <string name="maybe_no_more">Maybe no more lists</string>
    <string name="error">Error without reason</string>
    <string name="error_share">share image failed</string>
    <string name="not_legal_yourshotlink">This image has no valid url</string>
    <string name="dir_picasso_cache">/data/data/party.danyang.nationalgeographic/cache/picasso-cache</string>
    <string name="save_in_file">image saved in %s </string>
    <string name="save_img_with_resolution">save image [%1$d * %2$d]</string>
    <string name="save_img">save image</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="author">author(%s)</string>
    <string name="ok">OK</string>
    <string name="permission_denied">permission denied</string>
    <string name="cannot_download_pic">cannot download pic</string>
    <string name="my_email">dreamcontinue.cd@gmail.com</string>
    <string name="enable_download_manager">DownloadManager is disabled. Please enable it</string>

    <string name="click_ono_more_to_exit">Press one more time to quit Lavender</string>

    <string name="settings_title_conventional">Conventional</string>

    <string name="settings_wifi_only">Wi-Fi only</string>
    <string name="settings_wifi_only_summary">load images only in Wi-Fi</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_double_click_exit">Double click back to quit</string>

    <string name="settings_title_others">Others</string>

    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_check_update">Check update</string>
    <string name="settings_report">Contact me</string>
    <string name="settings_donate">Donate to me</string>
    <string name="settings_go_to_market">Rating in market</string>
    <string name="settings_app_info">Lavender information</string>
    <string name="settings_about">About</string>
    <string name="setting_image">Image</string>
    <string name="setting_accelerate">Accelerate</string>
    <string name="setting_accelerate_custom_image_size">custom image size</string>
    <string name="setting_accelerate_custom_image_size_hint">only works while accelerate on</string>
    <string name="settings">Settings</string>
    <string name="settings_no_activity_handle">No activity to handle this intent</string>

    <string name="setting_dialog_custom_image_title">Custom image size (longer side)</string>
    <string name="setting_dialog_custom_image_content">Enter longer side length, the length of the longer side of the image will not exceed this figure</string>
    <string name="setting_dialog_custom_image_hint">recommendation 800-2000</string>

    <string name="single_pic_us">photo of the day</string>
    <string name="group_pic">Daily photos</string>
    <string name="random_pic">random photo</string>
    <string name="article">Articles</string>

    <string name="about_attention_content">Lavender based National Geographic daily selection of third-party applications， such as National Geographic Lavender has violated rights,
        it will be the first time to withdraw and stop updating.
        \n\nThanks @柠冰羽痕Ice @WangMT in coolapk
        \n\nIf you have any suggestions and comments to Lavender, welcome to contact me.</string>
    <string name="about_use_attention">About Lavender</string>
    <string name="about_image_from">Images from</string>
    <string name="about_from_ng"><a href="http://ng.bdatu.com/">ng.bdatu.com</a></string>
    <string name="about_from_ng_us"><a href="http://www.nationalgeographic.com/photography/photo-of-the-day/">www.nationalgeographic.com</a></string>
    <string name="about_go_to_github">Visit Lavender on github</string>
    <string name="about_github_address"><a href="https://github.com/dreamcontinue/Lavender">dreamcontinue/Lavender</a></string>
    <string name="about_used_libs">Libs</string>
    <string name="about_libs_picasso"><a href="https://github.com/square/picasso">square/picasso</a></string>
    <string name="about_libs_retrofit"><a href="https://github.com/square/retrofit">square/retrofit</a></string>
    <string name="about_libs_okhttp"><a href="https://github.com/square/okhttp">square/okhttp</a></string>
    <string name="about_libs_rxjava"><a href="https://github.com/ReactiveX/RxJava">ReactiveX/RxJava</a></string>
    <string name="about_libs_rxandroid"><a href="https://github.com/ReactiveX/RxAndroid">ReactiveX/RxAndroid</a></string>
    <string name="about_libs_gson"><a href="https://github.com/google/gson">google/gson</a></string>
    <string name="about_libs_swipebackfragment"><a href="https://github.com/YoKeyword/SwipeBackFragment">YoKeyword/SwipeBackFragment</a></string>
    <string name="about_libs_picasso2_okhttp3_downloader"><a href="https://github.com/JakeWharton/picasso2-okhttp3-downloader">JakeWharton/picasso2-okhttp3-downloader</a></string>
    <string name="about_libs_rxpermissions"><a href="https://github.com/tbruyelle/RxPermissions">tbruyelle/RxPermissions</a></string>
    <string name="about_libs_rxbinding"><a href="https://github.com/JakeWharton/RxBinding">JakeWharton/RxBinding</a></string>
    <string name="about_libs_realm"><a href="https://github.com/realm/realm-java">realm/realm-java</a></string>
    <string name="about_libs_touch_image_view"><a href="https://github.com/MikeOrtiz/TouchImageView">MikeOrtiz/TouchImageView</a></string>
    <string name="about_libs_appupdater"><a href="https://github.com/javiersantos/AppUpdater">javiersantos/AppUpdater</a></string>
    <string name="about_libs_error_view"><a href="https://github.com/xiprox/ErrorView">xiprox/ErrorView</a></string>
    <string name="about_libs_jsoup"><a href="https://jsoup.org/">jsoup</a></string>
    <string name="about_me">\@developer 梦的延续</string>

    <string name="load_not_in_wifi_while_in_wifi_only">Not in Wi-Fi! if you want load, please turn off wifiOnly</string>
    <string name="offline">Offline now</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
