<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_grey_300_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_yourshotlink"
        android:orderInCategory="90"
        android:title="@string/action_yourshotlink"
        android:icon="@drawable/ic_link_grey_300_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="80"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_grey_300_24dp"
        app:showAsAction="ifRoom" />
</menu>
