<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_dialog_custom_image_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/md_grey_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/setting_dialog_custom_image_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/md_grey_700" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_dialog_custom_image_hint"
            android:padding="16dp">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/md_grey_700" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</layout>